--- a/src/components/Shared/Button/Button.css
+++ b/src/components/Shared/Button/Button.css
@@ -4,9 +4,10 @@
   padding: 10px 20px;
   cursor: pointer;
   font-weight: 900;
+  width: 200px;
 }
 
 .form-submit-btn {
-  background-color: rgb(48, 158, 247);
+  background-color: salmon;
   color: white;
 }
