--- a/src/pages/New Recipe/NewRecipe.css
+++ b/src/pages/New Recipe/NewRecipe.css
@@ -1,3 +1,40 @@
+* {
+  box-sizing: border-box;
+}
+
 .recipe-form {
+  margin: auto;
   width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+.recipe-form input {
+  width: 400px;
+  height: 40px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  text-indent: 10px;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+.recipe-form textarea {
+  width: 400px;
+  height: 100px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 10px;
+  border-radius: 10px;
+  text-indent: 10px;
+  border: none;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+.recipe-form input:focus,
+.recipe-form textarea:focus {
+  outline: none !important;
+  box-shadow: 0 0 10px #c6585c;
 }
