--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Allura&display=swap');
+
 .navbar {
   background-color: salmon;
   color: white;
   width: 100%;
-  height: 4em;
+  height: 6em;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2em;
+  align-items: center;
+}
+
+.nav-left img {
+  margin-top: 4em;
+  width: 7em;
+  height: 7em;
+}
+
+.nav-right > ul {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: center;
+  list-style-type: none;
+}
+
+.nav-right > ul > li {
+  color: rgb(255, 255, 255);
+  font-weight: 300;
+  cursor: pointer;
+  font-size: 0.9em;
+}
+
+.nav-right > ul > li:hover {
+  color: rgb(0, 24, 120);
+  font-size: 0.8em;
+  font-weight: 400;
+}
+
+.nav-burger {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .nav-right {
+    display: none;
+  }
+  .nav-burger {
+    display: inline-block;
+  }
 }
