--- a/src/components/Recipe/RecipeComponent.css
+++ b/src/components/Recipe/RecipeComponent.css
@@ -1,12 +1,44 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .recipe-component {
-  width: 300px;
+  width: 400px;
   padding: 20px;
-  height: auto;
+  height: 400px;
   border-radius: 10px;
+  box-shadow: 2px 10px 10px 2px rgba(193, 31, 31, 0.2);
+  overflow-y: none;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.recipe-title {
+  font-weight: 300;
+  color: #560c03;
+  text-align: center;
+  padding: 10px;
+}
 
-  box-shadow: 2px 10px 10px 2px rgba(0, 0, 0, 0.2);
+.recipe-time {
+  font-weight: 300;
+  font-size: 1.3em;
+  color: #db1d08;
+  padding-bottom: 20px;
+}
+
+.recipe-method {
+  font-weight: 300;
+  padding: 20px;
+}
+
+.food-img {
+  width: 10%;
+  position: absolute;
+}
+
+.recipe-ingredients {
+  font-weight: 100;
 }
