--- a/src/components/Shared/Button/Button.css
+++ b/src/components/Shared/Button/Button.css
@@ -4,7 +4,7 @@
   padding: 10px 20px;
   cursor: pointer;
   font-weight: 900;
-  width: 200px;
+  width: 100px;
   height: 40px;
 }
 
@@ -18,6 +18,7 @@
   background-color: salmon;
   color: white;
   transition: all 0.3s ease;
+  width: 200px;
 }
 
 .details-btn:hover {
@@ -25,4 +26,16 @@
   height: 35px;
   background-color: rgb(197, 196, 196);
   color: rgb(230, 82, 82);
+}
+
+.ingredients-btn {
+  background-color: rgb(57, 57, 56);
+  color: white;
+  width: 80px;
+  margin-left: 20px;
+}
+
+.ingredients-btn:hover {
+  background-color: gainsboro;
+  color: rgb(57, 57, 56);
 }
