--- a/src/pages/New Recipe/NewRecipe.css
+++ b/src/pages/New Recipe/NewRecipe.css
@@ -11,12 +11,28 @@
   gap: 30px;
 }
 
-.recipe-form input {
+.header-title {
+  padding: 20px;
+}
+
+.recipe-form > div > input {
+  width: 300px;
+  height: 40px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  gap: 30px;
+  text-indent: 10px;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+.recipe-form > input {
   width: 400px;
   height: 40px;
   padding: 10px;
   border: none;
   border-radius: 10px;
+  gap: 30px;
   text-indent: 10px;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
 }
@@ -33,8 +49,24 @@
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
 }
 
+.recipe-form > p {
+  justify-self: baseline;
+}
+
 .recipe-form input:focus,
 .recipe-form textarea:focus {
   outline: none !important;
   box-shadow: 0 0 10px #c6585c;
+}
+
+.ingredient-div {
+  padding: 5px;
+}
+
+.ingredient-list {
+  padding: 5px;
+}
+
+.ingredient-list > li {
+  margin-top: 5px;
 }
